add the interface creation functions in the UI Class

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,19 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Weather App</title>
+	<script src="https://kit.fontawesome.com/935da3679a.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
-	
+	<nav>
+		<form action="">
+			 <input type="text" placeholder="Search.." id="search">
+			 <button type="submit"> <i class="fas fa-search"></i> </button>
+		 </form>
+	</nav>
+	<main class="centralized">
+		<div class="weather centralized">
+			<img src="" alt="">
+		</div>
+	</main>
 </body>
 </html>
