added the error handling UI

--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,9 @@
 	<script src="https://kit.fontawesome.com/935da3679a.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
-	<nav>
-		<form action="">
-			 <input type="text" placeholder="Search.." id="search">
-			 <button type="submit"> <i class="fas fa-search"></i> </button>
-		 </form>
+	<nav class="centralized">
+		<input type="search" placeholder="Search.." id="search">
+		<button type="submit"> <i class="fas fa-search"></i> </button>
 	</nav>
 	<main class="centralized">
 		<div class="weather centralized">
