create the logic behind the background change

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
 	<nav class="centralized">
-		<input type="search" placeholder="Search.." id="search">
-		<button type="submit"> <i class="fas fa-search"></i> </button>
+		<input type="search" placeholder="Search.." id="search" class="nav-items">
+		<button type="submit" class="nav-items"> <i class="fas fa-search"></i> </button>
 	</nav>
+	<div class="background"></div>
 	<main class="centralized">
 		<div class="weather centralized">
 			<img src="" alt="">
