replace webpack with vite

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Weather App</title>
 	<script src="https://kit.fontawesome.com/935da3679a.js" crossorigin="anonymous" defer></script>
+	<script type="module" src="/index.js"></script>
 </head>
 <body>
 	<nav class="centralized">
