--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
 		href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
 		rel="stylesheet"
 	/>
+	<link
+		href="./style.css"
+		rel="stylesheet"
+	/>
 	<script type="module" src="/index.js"></script>
 	<link rel="apple-touch-icon" sizes="57x57" href="./favicon/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="./favicon/apple-icon-60x60.png">
