--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 		rel="stylesheet"
 	/>
 	<link
-		href="./style.css"
+		href="style.css"
 		rel="stylesheet"
 	/>
 	<script type="module" src="/index.js"></script>
